--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jwt-decode": "^2.2.0",
     "react": "^16.5.2",
     "react-bootstrap": "^1.0.1",
+    "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "^16.5.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
