--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "jwt-decode": "^2.2.0",
+    "node-sass": "^4.14.1",
     "react": "^16.5.2",
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-table-next": "^4.0.3",
