--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.5.2",
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^16.5.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
