--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^16.5.2",
     "react-pro-sidebar": "^0.4.3",
     "react-router-bootstrap": "^0.25.0",
