--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.5.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.5.2",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "react-scroll": "^1.7.16"
   },
   "scripts": {
     "start": "react-scripts start",
