--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.5.2",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.5.2",
+    "react-phone-input-2": "^2.13.7",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1"
