--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "node-sass": "^4.14.1",
     "react": "^16.5.2",
     "react-bootstrap": "^1.0.1",
+    "react-bootstrap-icons": "^1.0.3-alpha5",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^16.5.2",
+    "react-pro-sidebar": "^0.4.3",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1"
