--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.5.0",
+    "jquery": "^3.5.1",
     "jwt-decode": "^2.2.0",
     "react": "^16.5.2",
     "react-bootstrap": "^1.0.1",
