--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.5.0",
-    "jquery": "^3.5.1",
     "jwt-decode": "^2.2.0",
     "react": "^16.5.2",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.5.2",
+    "react-elastic-carousel": "^0.7.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
-    "react-scroll": "^1.7.16"
+    "react-scroll": "^1.7.16",
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
