--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.5.2",
     "react-elastic-carousel": "^0.7.5",
+    "react-icons": "^3.11.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "react-scroll": "^1.7.16",
