--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.2",
+    "@trendmicro/react-sidenav": "^0.5.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.0",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.14.1",
-    "react": "^16.5.2",
+    "react": "^16.14.0",
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^16.5.2",
+    "react-router": "^5.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1"
