--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^16.5.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "react-scroll": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
