--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "is-core-module": "^2.2.0",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.14.1",
     "react": "^16.5.2",
