--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-keycloak/web": "^3.4.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "jwt-decode": "^2.2.0",
