--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "jwt-decode": "^2.2.0",
+    "keycloak-js": "^12.0.4",
     "node-sass": "^4.14.1",
     "react": "^16.5.2",
     "react-bootstrap": "^1.0.1",
@@ -35,5 +36,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^1.7.0"
   }
 }
