--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,9 @@
                 ]
             }
         ],
-        "react/jsx-props-no-spreading": "off"
+        "jsx-a11y/click-events-have-key-events": "off",
+        "react/jsx-props-no-spreading": "off",
+        "react-hooks/rules-of-hooks": "error",
+        "react-hooks/exhaustive-deps": "warn"
     }
 }
