--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-keycloak/web": "^3.4.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "is-core-module": "^2.2.0",
     "jwt-decode": "^2.2.0",
-    "keycloak-js": "^12.0.4",
     "node-sass": "^4.14.1",
     "react": "^16.5.2",
+    "react-auth-kit": "^1.4.8",
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
