--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "is-core-module": "^2.2.0",
