--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -5,4 +5,4 @@
 #
 
 # These owners will be the default owners for everything in the repo.
-*       @JJCSA-WEBDEV @Nishit-Gopani @jainamdi @shah-tejas @ronakshah2895
+*       @JJCSA-WEBDEV @Nishit-Gopani @jainamdi @shah-tejas 
