--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.2",
+    "@trendmicro/react-sidenav": "^0.5.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.0",
     "is-core-module": "^2.2.0",
     "jwt-decode": "^2.2.0",
@@ -14,9 +15,11 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^16.5.2",
+    "react-router": "^5.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
+    "styled-components": "^5.3.0",
     "react-scroll": "^1.8.1"
   },
   "scripts": {
