--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.14.1",
     "react": "^16.5.2",
+    "react-animate-on-scroll": "^2.1.5",
     "react-auth-kit": "^1.4.8",
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^16.5.2",
+    "react-icons": "^4.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "^3.4.1",
     "react-scroll": "^1.8.1"
   },
