--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@trendmicro/react-sidenav": "^0.5.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.0",
+    "country-state-city": "^3.0.1",
     "is-core-module": "^2.2.0",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.14.1",
