--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-auth-kit": "^1.4.8",
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^16.5.2",
     "react-icons": "^4.2.0",
