--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^16.5.2",
     "react-icons": "^4.2.0",
+    "react-responsive": "^9.0.2",
     "react-router": "^6.3.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^6.3.0",
