--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "country-state-city": "^3.0.1",
     "is-core-module": "^2.2.0",
     "jwt-decode": "^2.2.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "^8.0.0",
     "react": "^16.5.2",
     "react-animate-on-scroll": "^2.1.5",
     "react-auth-kit": "^2.1.0",
@@ -24,7 +24,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.1",
     "styled-components": "^5.3.0",
     "typewriter-effect": "^2.18.0"
@@ -49,8 +49,9 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
+    "eslint": "^7.0.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
