--- a/package.json
+++ b/package.json
@@ -51,9 +51,12 @@
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^1.7.0"
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "prettier": "^2.8.7"
   }
 }
