--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.5.0",
     "country-state-city": "^3.0.1",
+    "formik": "^2.2.9",
     "is-core-module": "^2.2.0",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.14.1",
@@ -27,7 +28,8 @@
     "react-scripts": "^3.4.1",
     "react-scroll": "^1.8.1",
     "styled-components": "^5.3.0",
-    "typewriter-effect": "^2.18.0"
+    "typewriter-effect": "^2.18.0",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
