--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^3.4.1",
     "react-scroll": "^1.8.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0",
     "typewriter-effect": "^2.18.0"
   },
