Update react-script and lint packages.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn",
       "react/prop-types": "off",
-      "prettier/prettier": "error"
+      "prettier/prettier": "error",
+      "no-param-reassign": ["error", { "props": false }]
     }
   }
