--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^16.5.2",
     "react-icons": "^4.2.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router": "^6.3.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^6.3.0",
