--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^16.5.2",
     "react-icons": "^4.2.0",
     "react-router": "^6.3.0",
     "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.11.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^3.4.1",
     "react-scroll": "^1.8.1",
@@ -51,12 +52,9 @@
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "prettier": "^2.8.7"
+    "eslint-plugin-react-hooks": "^1.7.0"
   }
 }
