--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-chrono": "^2.2.2",
     "react-dom": "^16.5.2",
     "react-icons": "^4.2.0",
     "react-phone-input-2": "^2.15.1",
