--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-chrono": "^2.2.2",
     "react-dom": "^16.5.2",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^4.2.0",
     "react-phone-input-2": "^2.15.1",
     "react-router": "^6.3.0",
@@ -30,8 +31,8 @@
     "react-scripts": "^3.4.1",
     "react-scroll": "^1.8.1",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1",
     "react-toastify": "^9.0.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0",
     "typewriter-effect": "^2.18.0",
     "yup": "^1.2.0"
