--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "is-core-module": "^2.2.0",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.14.1",
+    "password-validator": "^5.3.0",
     "react": "^16.5.2",
     "react-animate-on-scroll": "^2.1.5",
     "react-auth-kit": "^2.1.0",
