--- a/package.json
+++ b/package.json
@@ -3,40 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@popperjs/core": "^2.9.2",
+    "@popperjs/core": "^2.11.8",
     "@trendmicro/react-sidenav": "^0.5.0",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.5.0",
-    "country-state-city": "^3.0.1",
-    "formik": "^2.4.2",
-    "is-core-module": "^2.2.0",
-    "jwt-decode": "^2.2.0",
+    "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
+    "classnames": "^2.3.2",
+    "country-state-city": "^3.2.1",
+    "formik": "^2.4.5",
+    "is-core-module": "^2.13.0",
+    "jwt-decode": "^3.1.2",
     "node-sass": "^4.14.1",
     "password-validator": "^5.3.0",
-    "react": "^16.5.2",
-    "react-animate-on-scroll": "^2.1.5",
-    "react-auth-kit": "^2.1.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-animate-on-scroll": "^2.1.7",
+    "react-auth-kit": "^2.12.7",
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
-    "react-chrono": "^2.2.2",
-    "react-dom": "^16.5.2",
+    "react-chrono": "^2.3.0",
+    "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
-    "react-icons": "^4.2.0",
+    "react-icons": "^4.11.0",
     "react-phone-input-2": "^2.15.1",
-    "react-router": "^6.3.0",
+    "react-router": "^6.16.0",
     "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.16.0",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.1",
     "react-slick": "^0.29.0",
-    "react-toastify": "^9.0.3",
+    "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.3.0",
-    "typewriter-effect": "^2.18.0",
-    "yup": "^1.2.0"
+    "styled-components": "^6.0.8",
+    "typewriter-effect": "^2.21.0",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -58,14 +60,14 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint": "^8.50.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "prettier": "^2.8.7"
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^3.0.3"
   }
 }
