--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts --max_old_space_size=16384 build",
+    "build:stage": "env-cmd -f ./.env.staging npm run-script build",
+    "build:production": "env-cmd -f ./.env.production npm run-script build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
@@ -59,6 +61,7 @@
     ]
   },
   "devDependencies": {
+    "env-cmd": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^6.10.0",
