--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3000",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -67,6 +66,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "http-proxy-middleware": "^2.0.6",
     "prettier": "^2.8.7"
   }
 }
