--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@trendmicro/react-sidenav": "^0.5.0",
     "axios": "^0.28.1",
     "bootstrap": "^4.5.0",
+    "caniuse-lite": "^1.0.30001713",
     "country-state-city": "^3.2.1",
     "formik": "^2.4.6",
     "node-sass": "^4.14.1",
@@ -27,7 +28,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^8.2.0",
