--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
-    "react-chrono": "^2.2.2",
+    "react-chrono": "2.2.2",
     "react-countup": "^6.5.3",
     "react-dom": "^16.5.2",
     "react-google-recaptcha": "^3.1.0",
@@ -28,7 +28,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.4.1",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^8.2.0",
